Bug 448660 - Kickoff/Kicker favorites no longer distro-customizable through system-wide config
Summary: Kickoff/Kicker favorites no longer distro-customizable through system-wide co...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.24.0
Platform: Other All
: HI normal
Target Milestone: 1.0
Assignee: Noah Davis
URL:
Keywords: regression
: 458125 513250 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-17 16:45 UTC by Fabian Vogt
Modified: 2025-12-12 23:01 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2022-01-17 16:45:43 UTC
After https://invent.kde.org/plasma/plasma-desktop/-/commit/a609b639a3aa2493d1db3922fb7d733733d97c20, the favorites are ported to kastats before system-wide config (kickoffrc, plasmoid setup scripts) are evaluated. Afterwards, those don't have any effect anymore.

See https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/793 for details.
Comment 1 Noah Davis 2022-01-25 16:09:46 UTC
Ivan, do you know if it's possible for distros to modify the global favorites or at least the favorites of the default activity? I noticed  that ~/.config/kactivitymanagerd-statsrc stored the favorites of various instances of kickoff and kicker.
Comment 2 Noah Davis 2022-01-25 16:10:55 UTC
It seems like directly modifying the global favorites instead of first creating legacy favorites and converting them to KActivities favorites would be technically better.
Comment 3 arjenbalfoort 2023-01-01 14:03:01 UTC
I still haven't found a solution to this issue.

/usr/share/plasma/look-and-feel/org.kde.solydk.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kicker.js is ignored.
I also created /etc/skel/.config/kactivitymanagerd-statsrc with global favorites added, but on first login it is overwritten with the defaults.

I followed the Fabian's links but that didn't bring me closer to a solution.

Can anybody point me in the right direction?
Comment 4 Rik Mills 2023-01-01 14:16:28 UTC
In the end for Kubuntu I went brute force and patched the kicker/kickoff xml files

https://git.launchpad.net/~kubuntu-packagers/kubuntu-packaging/+git/plasma-desktop/plain/debian/patches/favourites.patch?h=kubuntu_lunar_archive

Not ideal, but it works.
Comment 5 Fabian Vogt 2023-01-01 14:45:24 UTC
(In reply to Rik Mills from comment #4)
> In the end for Kubuntu I went brute force and patched the kicker/kickoff xml
> files

Same here.
Comment 6 arjenbalfoort 2023-01-01 18:07:03 UTC
Thanks, that did the trick.
And agreed, it's rather crude but for now, it's good enough.
Comment 7 Nate Graham 2023-04-27 19:37:10 UTC
*** Bug 458125 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2024-03-27 02:12:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4152
Comment 9 Harald Sitter 2024-07-19 10:31:42 UTC
Git commit 9ef4cbcfae49752e774ab3abeda350d05258e3f0 by Harald Sitter.
Committed on 19/07/2024 at 10:11.
Pushed by sitter into branch 'master'.

kicker: give distros a way to manipulate favorites

simply seeds the initial ids list with values from
kicker-extra-favoritesrc

M  +18   -9    applets/kicker/plugin/kastatsfavoritesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9ef4cbcfae49752e774ab3abeda350d05258e3f0
Comment 10 arjenbalfoort 2024-08-02 09:53:37 UTC
Nice! 
Could you elaborate on how to configure this (where the kicker-extra-favoritesrc file is expected, which ids and where to get them)?
Comment 11 Nate Graham 2024-08-06 17:24:13 UTC
Indeed, this should be documented somewhere, ideally at https://develop.kde.org/docs/plasma/.

Harald, could you supply a sample config file, and Thiago, could you write up some docs about this?
Comment 12 Harald Sitter 2024-08-06 18:44:01 UTC
❯ cat /etc/xdg/kicker-extra-favoritesrc 
[General]
Prepend=org.kde.filelight.desktop;org.kde.drkonqi.coredump.gui.desktop
Append=org.kde.dragonplayer.desktop
IgnoreDefaults=false
Comment 13 Nate Graham 2025-12-12 16:33:14 UTC
*** Bug 513250 has been marked as a duplicate of this bug. ***
Comment 14 Thiago Sueto 2025-12-12 23:01:28 UTC
(In reply to Nate Graham from comment #11)
> Indeed, this should be documented somewhere, ideally at
> https://develop.kde.org/docs/plasma/.
> 
> Harald, could you supply a sample config file, and Thiago, could you write
> up some docs about this?

https://invent.kde.org/documentation/develop-kde-org/-/merge_requests/723