kicker: give distros a way to manipulate favorites

simply seeds the initial ids list with values from
kicker-extra-favoritesrc

BUG: 448660